hphp/hack/test/typecheck/references/pass_by_ref/pass_by_ref_annotation3.php.exp
File "pass_by_ref_annotation3.php", line 6, characters 9-9:
An expression is expected here. (Parsing[1002])
File "pass_by_ref_annotation3.php", line 6, characters 8-8:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation3.php", line 6, characters 8-8:
Unbound global constant (Typing) (Typing[4106])
File "pass_by_ref_annotation3.php", line 6, characters 8-8:
This argument should be annotated with 'inout' (Typing[4182])
File "container_functions.hhi", line 29, characters 57-60:
Because this is an inout parameter
File "pass_by_ref_annotation3.php", line 7, characters 9-10:
This argument should be annotated with 'inout' (Typing[4182])
File "container_functions.hhi", line 49, characters 62-65:
Because this is an inout parameter
