hphp/hack/test/typecheck/references/pass_by_ref/pass_by_ref_annotation3.php
<?hh // strict

function test(): void {
  $a = array('red' => 4, 'apple' => 12, 'foo' => 1);

  sort(&$a);
  ksort($a);
}
